# cento

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md
.github/workflows/: main.yml
acus/: CMakeLists.txt  Cargo.toml  lisp.cpp  lisp.hpp  main.cpp  midi.cpp
acus/src/: main.rs
cento/: Cargo.toml
cento/src/: explore.rs  find.rs  join.rs  lib.rs  merge.rs  split.rs  tile.rs
cento/src/tests/: fixtures.rs  mod.rs  utils.rs
cento/tests/: explore.rs  find.rs  utils.rs
cmake/: centoConfig.cmake.in
cpp/acus/: CMakeLists.txt  lisp.cpp  main.cpp  midi.cpp  midi.hpp
cpp/include/cento/: cento.hpp  centoDefs.hpp  centoExplore.hpp  centoFind.hpp  centoInsert.hpp  centoMerge.hpp  centoNamespace.hpp  centoPoint.hpp  centoSplit.hpp  centoTile.hpp  centoTilePlan.hpp  centoZTile.hpp
cpp/test/: CMakeLists.txt  explore.cpp  find.cpp  tile.cpp  utils.hpp
docs/: magic_corner_stitching.md
include/cento/: cento.hpp  centoCreate.hpp  centoDefs.hpp  centoExplore.hpp  centoFind.hpp  centoInsert.hpp  centoJoin.hpp  centoMTile.hpp  centoMacros.hpp  centoMerge.hpp  centoNamespace.hpp  centoPlane.hpp  centoPoint.hpp  centoRect.hpp  centoRemove.hpp  centoSplit.hpp  centoTile.hpp  centoTilePlan.hpp  centoZPlane.hpp  centoZTile.hpp
src/: main.cpp
test/: CMakeLists.txt  PlaneSnapshot.hpp  explore.cpp  find.cpp  insert.cpp  join.cpp  main.cpp  merge.cpp  point.cpp  rect.cpp  remove.cpp  snapshot.cpp  split.cpp  tile.cpp  utils.hpp
testcase/: example1.txt  example2.txt  example3.txt  mem_array.acus  res_array.acus
